--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ html {
     position: relative;
     overflow: hidden;
 }
-
+.container:hover .rotate{
+    scale: 1.2;
+}
 .rotate {
     width: 100%;
     height: 100%;
@@ -34,6 +36,7 @@ html {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    transition: all .3s linear;
 }
 
 .show {
